# ParallelFinalHW

./: .gitignore  CMakeLists.txt  readme.md
include/: c_pdsyev.h  kernel.h  mesh.h  timer.h
src/: c_pdsyev.c  kernel.cpp  main.cpp  mesh.cpp  timer.cpp
